SERVER-22279 SubplanStage must register its MultiPlanStage in _children

Failure to do this caused save() and restore() not to be passed through to
the MultiPlanStage (and ultimately the WiredTigerIndexCursor) when
MultiPlanStage::pickBestPlan yielded.